--- a/.harness/iacpipleine231.yaml
+++ b/.harness/iacpipleine231.yaml
@@ -21,27 +21,6 @@ pipeline:
           execution:
             steps:
               - step:
-                  type: IACMTerraformPlugin
-                  name: init
-                  identifier: init
-                  timeout: 10m
-                  spec:
-                    command: init
-              - step:
-                  type: IACMTerraformPlugin
-                  name: plan
-                  identifier: plan
-                  timeout: 10m
-                  spec:
-                    command: plan
-              - step:
-                  type: IACMTerraformPlugin
-                  name: apply
-                  identifier: apply
-                  timeout: 10m
-                  spec:
-                    command: apply
-              - step:
                   type: Run
                   name: Deploy-packages-to-vm
                   identifier: Deploypackagestovm
@@ -100,4 +79,32 @@ pipeline:
                       # EOF
                       # cat payload.json
                       # }
+              - step:
+                  type: IACMTerraformPlugin
+                  name: init
+                  identifier: init
+                  timeout: 10m
+                  spec:
+                    command: init
+              - step:
+                  type: IACMTerraformPlugin
+                  name: plan
+                  identifier: plan
+                  timeout: 10m
+                  spec:
+                    command: plan
+              - step:
+                  type: IACMApproval
+                  name: IACMApproval_1
+                  identifier: IACMApproval_1
+                  spec:
+                    autoApprove: false
+                  timeout: 1h
+              - step:
+                  type: IACMTerraformPlugin
+                  name: apply
+                  identifier: apply
+                  timeout: 10m
+                  spec:
+                    command: apply
         tags: {}
