Update pipeline iacpipleine-231

--- a/.harness/iacpipleine231.yaml
+++ b/.harness/iacpipleine231.yaml
@@ -25,8 +25,8 @@ pipeline:
                   name: Deploy-packages-to-vm
                   identifier: Deploypackagestovm
                   spec:
-                    connectorRef: dockerrregistery
-                    image: nginx-httpd
+                    connectorRef: dockerconnector
+                    image: new
                     shell: Sh
                     command: |-
                       #!/bin/bash
