--- a/.harness/iacpipleine231.yaml
+++ b/.harness/iacpipleine231.yaml
@@ -26,7 +26,7 @@ pipeline:
                   identifier: Deploypackagestovm
                   spec:
                     connectorRef: dockerconnector
-                    image: new
+                    image: alpine
                     shell: Sh
                     command: |-
                       #!/bin/bash
